# next-django-template

./: .gitignore  Makefile  README.md  docker-compose.yml  middleware.ts  package.json  pnpm-lock.yaml  prompt.txt
actions/: base.ts
server/: bulk-permissions.py  pyproject.toml
server/config/: asgi.py  routing.py  settings.py  urls.py
server/core/: apps.py  backends.py  consumers.py  models.py  signals.py  translation.py  urls.py
server/core/auth/: __init__.py  apps.py  serializers.py  urls.py  utils.py  views.py
server/core/auth/services/: __init__.py  auth_flow.py  device.py  form.py  otp.py  tokens.py
server/core/management/commands/: test_menu_sync.py
server/core/migrations/: 0001_initial.py
server/core/permissions/: menu_parser.py  registry.py  serializers.py  service.py  sync_serializers.py  sync_service.py  sync_views.py  urls.py  views.py
server/core/permissions/groups/: serializers.py  urls.py  views.py
server/core/users/: serializers.py  urls.py  views.py
server/personnel/: admin.py  models.py  translation.py  urls.py
server/personnel/migrations/: 0001_initial.py
server/personnel/settings/: __init__.py  urls.py
server/personnel/settings/allowances/: serializers.py  urls.py  views.py
server/personnel/settings/banks/: __init__.py  serializers.py  urls.py  views.py
server/personnel/settings/battalionTree/: serializers.py  urls.py  views.py
server/personnel/settings/contractTypes/: serializers.py  urls.py  views.py
server/utils/: cache.py  defaults.py  effective_permission.py  email.py  middleware.py  otp.py  pagination.py
(+243 files in other folders)
